--- a/index.html
+++ b/index.html
@@ -261,4 +261,6 @@
             // Hide the login form
             document.getElementById("loginForm").style.display = "none";
         });
-   
+    </script>
+</body>
+</html>
