--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             width: 24px;
             height: 24px;
             margin-right: 10px;
-            background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Icon_Flag.svg/1024px-Icon_Flag.svg.png');
+            background-image: url('report flag.png'); /* Use your custom image */
             background-size: cover;
             display: inline-block;
         }
