--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
         }
 
         body {
-            background-color: #f4f4f9; /* Slightly off color */
-            font-family: "Arial", sans-serif; /* Not the Facebook font */
+            background-color: #f4f4f9;
+            font-family: "Arial", sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             color: #2c2f33;
             position: relative;
+            overflow: hidden;
         }
 
         /* Container for the login form */
@@ -31,119 +32,82 @@
             border-radius: 8px;
             box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
             text-align: center;
-            border: 2px solid #f1f1f1; /* Overdone border */
+            border: 2px solid #f1f1f1;
+            display: none;
         }
 
         /* Fakebook logo with a small typo and off color */
         .logo {
             font-size: 36px;
             font-weight: bold;
-            color: #1877F2; /* Same color as Facebook, but it's not their logo */
+            color: #1877F2;
             margin-bottom: 18px;
         }
 
-        /* Header - awkward phrasing */
-        h1 {
-            font-size: 22px;
-            color: #1c1e21;
-            margin-bottom: 25px;
-        }
-
-        /* Input styles */
-        input[type="text"], input[type="password"] {
-            width: 100%;
-            padding: 12px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 16px;
-        }
-
-        /* Input field focus has the wrong color */
-        input[type="text"]:focus, input[type="password"]:focus {
-            border-color: #42b72a; /* Green instead of blue */
-            outline: none;
-        }
-
-        /* Submit button style with the wrong color */
-        button {
-            width: 100%;
-            padding: 12px;
-            background-color: #3b5998; /* Facebook blue, but still suspicious */
-            color: white;
-            border: none;
-            border-radius: 5px;
-            font-size: 18px;
-            cursor: pointer;
-            transition: background-color 0.2s ease-in-out;
-        }
-
-        /* Button hover color is too dark */
-        button:hover {
-            background-color: #334d84;
-        }
-
-        /* Create new account link with wrong font size */
-        .create-account {
-            font-size: 13px; /* Way too small */
-            color: #1877F2;
-            text-decoration: none;
-            margin-top: 15px;
-            display: block;
-        }
-
-        .create-account:hover {
-            text-decoration: underline;
-        }
-
-        /* Phishing warning section with too much text */
-        .phishing-warning {
-            display: none;
-            background-color: #f8d7da;
-            color: #721c24;
-            padding: 15px;
-            border-radius: 5px;
-            margin-top: 20px;
-            font-size: 14px; /* Too small */
-        }
-
-        .phishing-info {
-            display: none;
+        /* Suspicious Ad banner */
+        .ad-banner {
             background-color: #ffcc00;
             color: black;
             padding: 20px;
-            border-radius: 8px;
-            margin-top: 30px;
-            font-size: 16px;
-        }
-
-        .phishing-info h2 {
-            font-size: 18px; /* Small heading */
-            margin-bottom: 10px;
-        }
-
-        .phishing-info p {
-            margin: 10px 0;
-        }
-
-        /* Report button */
-        .report-button {
-            background-color: #f44336; /* Red color */
-            color: white;
-            border: none;
-            border-radius: 5px;
-            padding: 10px;
-            font-size: 16px;
+            text-align: center;
+            font-size: 18px;
+            position: absolute;
+            top: 10%;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80%;
+            border-radius: 10px;
             cursor: pointer;
+        }
+
+        .ad-banner a {
+            color: #0033cc;
+            text-decoration: underline;
+        }
+
+        .ad-banner:hover {
+            background-color: #ff9800;
+        }
+
+        /* Malware download link */
+        .malware-link {
+            background-color: #f44336;
+            color: white;
+            padding: 15px;
+            border-radius: 5px;
+            text-align: center;
+            font-size: 18px;
             margin-top: 20px;
-            transition: background-color 0.2s ease-in-out;
+            cursor: pointer;
+            width: 100%;
+            display: none;
         }
 
-        .report-button:hover {
-            background-color: #e53935;
+        .malware-link:hover {
+            background-color: #d32f2f;
         }
 
-        /* Report dialog */
+        /* Flag icon for report button */
+        .flag-icon {
+            width: 24px;
+            height: 24px;
+            margin-right: 10px;
+            background-image: url('report flag.png');
+            background-size: cover;
+            display: inline-block;
+        }
+
+        /* Position the flag on top left */
+        .report-container {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+        }
+
+        /* Report dialog box */
         #reportDialog {
             display: none;
             position: fixed;
@@ -190,27 +154,6 @@
         #reportDialog .close-button:hover {
             background-color: #777;
         }
-
-        /* Flag icon for report button */
-        .flag-icon {
-            width: 24px;
-            height: 24px;
-            margin-right: 10px;
-            background-image: url('report flag.png'); /* Use your custom image */
-            background-size: cover;
-            display: inline-block;
-        }
-
-        /* Position the flag on top left */
-        .report-container {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            display: flex;
-            align-items: center;
-            cursor: pointer;
-        }
-
     </style>
 </head>
 <body>
@@ -219,6 +162,19 @@
         <span>Report Website</span>
     </div>
 
+    <!-- Suspicious Ad Banner (Simulates Ads) -->
+    <div id="adBanner" class="ad-banner" onclick="handleAdClick()">
+        Congratulations! You've won a free iPhone! <br>
+        <a href="#">Click here to claim your prize!</a>
+    </div>
+
+    <!-- Fake Malware Download Link -->
+    <div id="malwareLink" class="malware-link" onclick="handleMalwareDownload()">
+        Warning: Clicking this link may download malware to your device! <br>
+        <button>Click to Download Now</button>
+    </div>
+
+    <!-- Fake Login Form -->
     <div class="login-container">
         <div class="logo">Fakebook</div>
         <h1>Log into Fakebook</h1>
@@ -227,15 +183,6 @@
             <input type="password" id="password" placeholder="Password" required><br>
             <button type="submit">Log In</button>
         </form>
-        <a href="#" class="create-account">Create New Account</a>
-
-        <!-- Phishing Warning -->
-        <div id="phishingWarning" class="phishing-warning"></div>
-        <div id="phishingInfo" class="phishing-info">
-            <h2>What is Phishing?</h2>
-            <p>Phishing is a type of cyber attack where attackers impersonate legitimate services or websites to trick you into providing sensitive information like usernames, passwords, or credit card numbers.</p>
-            <p>Always ensure that the website you are on is authentic by checking the URL carefully and looking for the padlock symbol in the browser's address bar. Don't be tricked into entering your information on suspicious sites!</p>
-        </div>
     </div>
 
     <!-- Report Dialog Box -->
@@ -246,7 +193,6 @@
             <option value="phishing">Phishing Attempt</option>
             <option value="malware">Possible Malware</option>
             <option value="fraud">Fraudulent Content</option>
-            <option value="other">Other</option>
         </select>
         <textarea id="additionalInfo" placeholder="Additional information (optional)" rows="4"></textarea>
         <button onclick="submitReport()">Submit Report</button>
@@ -254,19 +200,37 @@
     </div>
 
     <script>
-        // List of possible scams
+        // List of possible scam types
         const scams = [
             { type: 'phishing', message: 'This website is asking for your email and password! It looks suspicious, please be cautious!' },
             { type: 'malware', message: 'This website might infect your device with malware, avoid entering any personal information.' },
             { type: 'fraud', message: 'This website is displaying fake promotions, claiming you won a prize!' }
         ];
 
-        // Select a random scam
-        let currentScam = scams[Math.floor(Math.random() * scams.length)];
+        // Randomly select scam type to simulate
+        const currentScam = scams[Math.floor(Math.random() * scams.length)];
 
-        // Display phishing warning with the message
-        document.getElementById('phishingWarning').innerText = `Warning: ${currentScam.message}`;
-        document.getElementById('phishingWarning').style.display = 'block';
+        // Simulate different scams
+        if (currentScam.type === 'fraud') {
+            // Show suspicious ad
+            document.getElementById('adBanner').style.display = 'block';
+        } else if (currentScam.type === 'malware') {
+            // Show malware download link
+            document.getElementById('malwareLink').style.display = 'block';
+        } else if (currentScam.type === 'phishing') {
+            // Show fake login form
+            document.querySelector('.login-container').style.display = 'block';
+        }
+
+        // Handle click on suspicious ad
+        function handleAdClick() {
+            alert('This is a fraudulent advertisement! You should not click on this.');
+        }
+
+        // Handle click on malware download link
+        function handleMalwareDownload() {
+            alert('This is a malware link! Clicking on it could infect your device.');
+        }
 
         // Show report dialog
         function showReportDialog() {
@@ -292,18 +256,6 @@
             alert(feedback);
             closeReportDialog();  // Close the dialog after submission
         }
-
-        // Update phishing warning and info on form submission
-        document.getElementById("loginForm").addEventListener("submit", function(event) {
-            event.preventDefault();
-            
-            // Show phishing warning and info
-            document.getElementById("phishingWarning").style.display = "block";
-            document.getElementById("phishingInfo").style.display = "block";
-
-            // Hide the login form
-            document.getElementById("loginForm").style.display = "none";
-        });
     </script>
 </body>
 </html>
